# WasmEdge

./: CMakeLists.txt
cmake/: Helper.cmake
include/host/wasi/: wasifunc.h
lib/host/wasi/: CMakeLists.txt  wasifunc.cpp  wasimodule.cpp
tools/wasmedge/: wasmedgec.cpp
